--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.0",
     "@react-spring/parallax": "^9.7.5",
     "@tailwindcss/vite": "^4.1.3",
