--- a/package.json
+++ b/package.json
@@ -3,31 +3,30 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://nathanskibicki.github.io/resume-website",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@mui/icons-material": "^7.0.2",
-    "@mui/material": "^7.0.0",
-    "@react-spring/parallax": "^9.7.5",
-    "@tailwindcss/vite": "^4.1.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-scroll-parallax": "^3.4.5",
-    "tailwindcss": "^4.1.3"
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.10",
+    "@react-spring/parallax": "^9.7.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scroll-parallax": "^3.4.3",
+    "gh-pages": "^6.1.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "vite": "^6.2.0"
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "vite": "^5.1.3"
   }
 }
