--- a/vercel.json
+++ b/vercel.json
@@ -14,17 +14,16 @@
     {
       "src": "/assets/(.*)",
       "headers": {
-        "cache-control": "public, max-age=31536000, immutable",
-        "content-type": "application/javascript"
+        "cache-control": "public, max-age=31536000, immutable"
       },
-      "continue": true
+      "dest": "/assets/$1"
     },
     {
-      "src": "/(.*\\.js)",
+      "src": "/(.*\\.(js|css|ico|png|jpg|jpeg|svg|webp|json))",
       "headers": {
-        "content-type": "application/javascript"
+        "cache-control": "public, max-age=31536000, immutable"
       },
-      "continue": true
+      "dest": "/$1"
     },
     {
       "src": "/(.*)",
